      "debian-binary" member where allowed by dpkg.  These
      members will trigger misplaced-extra-member-in-deb tag.
      Thanks to Guillem Jover for the report and the feedback.
      (Closes: #718349)
  * checks/fields.{desc,pm}:
    + [NT] Warn about "?op=log" in svn.d.o brower links.  Thanks
      to Paul Wise for the report.  (Closes: #707700)
  * checks/files.{desc,pm}:
    + [BR] Fix false-positive dir-or-file-in-build-tree for
      the sbuild source package.  (Closes: #720910)
    + [NT] Add check for empty udeb packages.  Thanks to Cyril
      Brulebois for the suggestion.  (Closes: #672664)
    + [NT] Remove exception for "/selinux" top-level directory.
      Thanks to Laurent Bigonville for the report.
      (Closes: #723730)
    + [NT] Add a check for files in PATH being representable
      using only ASCII characters.  (Closes: #723732)
  * checks/menu-format.desc:
    + [BR] Rewrite description of the tag for desktop files
      without a keywords entry based on a wording from Gaudenz
      Steinlin.  (Closes: #706966)
    + [NT] Apply patch from Lucas Nussbaum to add an additional
      reference to the desktop-entry-lacks-keywords-entry tag.
      (Closes: #722582)
  * checks/rules.{desc,pm}:
    + [BR] Refactor the check for known targets in d/rules.
    + [BR] Add check for missing for recommended "get-orig-source"
      target in d/rules for packages that look like they have been
      repacked.  (Closes: #460174)
  * checks/scripts.desc:
    + [NT] Demote the certainty of shell-script-fails-syntax-check
      due to "extglob" in bash.  Thanks To Trent W. Buck for the
      report.  (Closes: #699410)
  * checks/testsuite.pm:
    + [NT] Add "allow-stderr" as known autopkgtest "restriction".
      Thanks to Jérémy Bobbio for the report and the initial
      patch.  (Closes: #721179)
  * checks/version-substvars{.desc,.pm}:
    + [NT] Mention that version-substvar-for-external-package